feat: implement dynamic sidebar, fix security roles sync and signup flow